monitoring-stack/templates/oncall-grafana-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana-direct
  labels:
    argocd.argoproj.io/instance: monitoring-stack
spec:
  ports:
    - name: grafana-http
      protocol: TCP
      port: 3000
      targetPort: grafana-http
  selector:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: monitoring-stack
    app.kubernetes.io/part-of: bdop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  grafana-direct
  labels:
    app: grafana-direct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-direct
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name:  grafana-direct
        app:  grafana-direct
    spec:
      containers:
        - name:  grafana-direct
          image: nginx:1.19-alpine
          ports:
            - name:  http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-conf
          configMap:
            name: grafana-direct
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-direct-nginx
spec:
  ports:
    - name: grafana-direct
      port: 8080
      targetPort: 8080
  selector:
    app: grafana-direct
