monitoring-stack/templates/pyroscope-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-stack-pyroscope-ingress
  annotations:
    route.openshift.io/termination: "edge"
spec:
  rules:
  - host: pyroscope-monitoring-stack.apps.baloise.dev
    http:
      paths:
        - backend:
            service:
              name: monitoring-stack-pyroscope-query-frontend
              port:
                number: 4040
          path: /querier.v1.QuerierService/
          pathType: Prefix
        - backend:
            service:
              name: monitoring-stack-pyroscope-query-frontend
              port:
                number: 4040
          path: /render
          pathType: Prefix
        - backend:
            service:
              name: monitoring-stack-pyroscope-query-frontend
              port:
                number: 4040
          path: /render-diff
          pathType: Prefix
        - backend:
            service:
              name: monitoring-stack-pyroscope-distributor
              port:
                number: 4040
          path: /push.v1.PusherService/
          pathType: Prefix
        - backend:
            service:
              name: monitoring-stack-pyroscope-distributor
              port:
                number: 4040
          path: /ingest
          pathType: Prefix
